--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@ server.tomcat.uri-encoding=utf-8
 
 #数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/questionnaire
+spring.datasource.url=jdbc:mysql://47.94.46.115:3306/questionnaire
 #spring.datasource.url=jdbc:mysql://localhost:3306/questionnaire
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 ##指定使用redis数据库索引(默认为0)
 spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.host=47.94.46.115
 #spring.redis.host=192.168.126.149
 spring.redis.port=6379
 spring.redis.password=123456
