--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,8 @@ spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 ##指定使用redis数据库索引(默认为0)
 spring.redis.database=0
 spring.redis.host=47.94.46.115
-#spring.redis.host=192.168.126.149
-spring.redis.port=6379
-spring.redis.password=123456
+spring.redis.port=2020
+spring.redis.password=3170105860
 
 spring.authorize.salt=@(!($(317ziffer010djlsf5860
 #session生命周期
