--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,11 @@ spring.redis.host=47.94.46.115
 spring.redis.port=2020
 spring.redis.password=3170105860
 
+###发送邮箱验证码
+#spring.email.host=smtp.qq.com
+#spring.email.username=937427981@qq.com
+#spring.email.password=vkyppkpwpvewbcaa
+
 spring.authorize.salt=@(!($(317ziffer010djlsf5860
 #session生命周期
 server.servlet.session.timeout=30m
